re PR c++/65942 ([C++14] cannot use std::function as comparator in algorithms)

PR c++/65942
	* decl2.c (mark_used): Don't always instantiate constexpr fns.
	* constexpr.c (cxx_eval_call_expression): Instantiate them here.

From-SVN: r224008